Fix two small bugs in gallery covers

--- a/website/static/polaroid/scss/style.scss
+++ b/website/static/polaroid/scss/style.scss
@@ -308,9 +308,6 @@ h2 {
         line-height: 85px;
         background-color: #e9ecef;
         &:hover {
-            border-style: solid;
-            border-color: black;
-            border-width: 2px;
         }
     }
 }
